--- a/TIP Assignment 1.ipynb
+++ b/TIP Assignment 1.ipynb
@@ -18,7 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "def linreg_cost(X,theta):\n",
+    "def linreg_cost(X,y,theta):\n",
     "    \"\"\"This function returns the cost for a linear regression model using numpy\"\"\"\n",
     "    # Write your cost calculating code here and return the cost and remove the pass statement\n",
     "    pass   #Remove this line"
@@ -45,7 +45,7 @@
    },
    "outputs": [],
    "source": [
-    "def gradient(X,theta):\n",
+    "def gradient(X,y,theta):\n",
     "    \"\"\"This function calculates and returns gradients\"\"\"\n",
     "    pass   #Needn't tell you again to delete this"
    ]
